<resources>
    <string name="app_name" translatable="false">Cining</string>

    <!-- Strings related to login -->
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">  Password</string>
    <string name="email" translatable="false">  Email</string>
    <string name="username">  Username</string>

    <!-- Navigation -->
    <string name="title_activity_list" translatable="false">Cines</string>
    <string name="title_activity_settings">Settings</string>
    <string name="logo_description" translatable="false">Logo</string>
    <string name="cine_title">Title</string>

    <!-- Strings used for fragments for navigation -->
    <string name="cine_image_caption">Cine image</string>
    <string name="save">Save</string>
    <string name="name">"  Name"</string>
    <string name="address">" Address"</string>
    <string name="website">"  Website"</string>
    <string name="latitude">"  Latitude"</string>
    <string name="longitude">"  Longitude"</string>
    <string name="image_url">"  Image"</string>
    <string name="create_cine">Create cine</string>

    <!-- Strings used for bottom bar -->
    <string name="cines" translatable="false">Cines</string>
    <string name="map">Map</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>

    <!-- Inline texts -->
    <string name="sign_up_incorrect">Incorrect user combination, please try again</string>
    <string name="incomplete_username">Please choose a username</string>
    <string name="incomplete_email">Please complete your email</string>
    <string name="incomplete_password">Please choose a password</string>
    <string name="incomplete_name">Please complete the name</string>
    <string name="incomplete_address">Please complete the address</string>
    <string name="incomplete_coordinates">Please complete the coordinates</string>
    <string name="going_settings">Going to settings</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="short_password">Password must be at least 6 characters</string>
    <string name="invalid_email">Invalid email</string>
    <string name="take_photo">Take photo</string>
    <string name="ask_permission">Turn on location</string>
</resources>