<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragments.users.LoginFragment">

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="5dp"
        android:textColor="@color/input_text"
        android:textColorHint="@color/input_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/input_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername" />


    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/action_sign_in_short"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_up_here"
        android:textColor="@color/input_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"/>

</androidx.constraintlayout.widget.ConstraintLayout>